--- a/css/card.css
+++ b/css/card.css
@@ -1,162 +1,220 @@
-@font-face {
-    font-family: "web-font";
-    src: url(./meybi/font.ttf);
-}
-body{
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #fae1dd;
+    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
 }
-.container{
+
+#envelope {
     position: relative;
+    height: 180px;
+    width: 280px;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    margin-left: auto;
+    margin-right: auto;
+    top: 40%;
+    background-color: #ff2a22;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
-.container .valentines{
-    position: relative;
+
+#envelope:hover {
     cursor: pointer;
-    top: 20px;
-    animation: up 2s linear infinite;
 }
-.container .valentines .envelope{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 200px;
-    background-color: #f08080;
-}
-.container .valentines .envelope::before{
-    content: "";
+
+.front {
     position: absolute;
-    width: 212px;
-    height: 212px;
-    background-color: #f08080;
-    transform: rotate(45deg);
-    top: -105px;
-    left: 44px;
-    border-radius: 30px 0 0 0;
-}
-.front{
-    position: absolute;
-    border-right: 180px solid #f4978e;
-    border-top: 95px solid transparent;
-    border-bottom: 100px solid transparent;
-    left: 120px;
-    top: 5px;
     width: 0;
     height: 0;
-    z-index: 10;
+    z-index: 3;
 }
-.front::before{
-    content: "";
-    position: absolute;
-    border-left: 300px solid #f4978e;
-    border-top: 195px solid transparent;
-    left: -120px;
-    top: -95px;
-}
-.card{
-    position: relative;
-    width: 250px;
-    height: 180px;
-    background-color: #fff;
-    border-radius: 2px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    transition: 1s;
-}
-.card::before{
-    content: "";
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    border: 2px solid #003049;
-    border-style: dashed;
-}
-.valentines:hover .card{
-    transform: translateY(-100px);
-}
-.card .text{
-    font-family:'web-font';
-    font-size: 28px;
-    text-align: center;
-    line-height: 28px;
-    color: #003049;
-}
-.card .heart{
-    position: relative;
-    height: 26px;
-    width: 26px;
-    bottom: -16px;
-    background-color: #f20044;
-    transform: rotate(-45deg);
-    box-shadow: -10px 10px 90px #f20044;
-    animation: heart 0.6s linear infinite;
-}
-.card .heart::before{
-    content:"";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: -50%;
-    background-color: #f20044;
-    border-radius: 50px;
-    box-shadow: -10px -10px 90px #f20044;
 
+.flap {
+    border-top: 98px solid #ff2a22;
+    border-left: 140px solid transparent;
+    border-right: 140px solid transparent;
+    border-bottom: 82px solid transparent;
+    transform-origin: top;
 }
-.card .heart::after{
-    content:"";
+
+.pocket {
+    border-left: 140px solid #ff748d;
+    border-right: 140px solid #ff748d;
+    border-bottom: 90px solid #ff98a7;
+    border-top: 90px solid transparent;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.letter {
     position: absolute;
-    height: 100%;
-    width: 100%;
-    right: -50%;
-    background-color: #f20044;
-    border-radius: 50px;
-    box-shadow: 10px 10px 90px #f20044;
+    background-color: white;
+    width: 90%;
+    height: 160px;
+    bottom: 0;
+    left: 5%;
+    border-radius: 10px;
+    box-shadow: 0 2px 26px rgba(0, 0, 0, .12);
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    z-index: 1;
 }
-@keyframes heart{
-    0%{
-        transform: rotate(-45deg) scale(1.07);
-    }
-    80%{
-        transform: rotate(-45deg) scale(1.0);
-    }
-    100%{
-        transform: rotate(-45deg) scale(0.8);
-    }
-}
-@keyframes up {
-       0%,100%{
-           transform: translateY(0);
-       } 
-       50%{
-           transform: translateY(-30px);
-       }
-}
-.valentines::before{
+
+.letter:after {
     content: "";
     position: absolute;
-    width: 330px;
-    height: 25px;
-    border-radius: 50%;
-    background-color: rgba(0 , 0 , 0 ,0.3);
-    top: 265px;
-    left: -15px;
-    animation: scale 2s linear infinite;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
-@keyframes scale{
-    0%,100%{
-        transform: scale(1);
+
+.line1 {
+    top: 15%;
+}
+.line2 {
+    top: 30%;
+}
+.line3 {
+    top: 50%;
+    text-align: center;
+}
+.line4 {
+    top: 65%;
+    text-align: center;
+}
+
+.open .flap {
+    transform: rotatex(180deg);
+    transition: transform 0.4s ease, z-index 0.6s;
+    z-index: 1;
+}
+
+.close .flap {
+    transform: rotatex(0deg);
+    transition: transform 0.4s 0.6s ease, z-index 1s;
+    z-index: 5;
+}
+
+.open .letter {
+    height: 180px;
+    transform: translatey(-170px);
+    transition: transform 0.4s 0.6s ease, z-index 0.6s;
+    z-index: 2;
+}
+
+.close .letter {
+    transform: translatey(0deg);
+    transition: transform 0.4s ease, z-index 1s;
+    z-index: 1;
+}
+
+.hearts {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 2;
+}
+
+.heart {
+    position: absolute;
+    bottom: 20px;
+    width: 30px;
+    height: 30px;
+    background: #ff2a22;
+    transform: rotate(45deg);
+    animation: floatUp linear forwards;
+    border-radius: 4px;
+}
+
+.heart::before,
+.heart::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    border-radius: 50%;
+}
+
+.heart::before {
+    top: -50%;
+    left: 0;
+}
+
+.heart::after {
+    left: -50%;
+    top: 0;
+}
+
+.close .heart {
+    opacity: 0;
+    animation: none;
+}
+
+.reset {
+    text-align: center;
+}
+
+.reset button {
+    font-weight: 800;
+    font-style: normal;
+    transition: all 0.1s linear;
+    background-color: transparent;
+    border: solid 2px #FF6863;
+    border-radius: 4px;
+    color: #FF6863;
+    display: inline-block;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin: 20px;
+    margin-top: 5px;
+    padding: 10px;
+    line-height: 2em;
+    text-decoration: none;
+    min-width: 150px;
+    outline: none;
+}
+
+.reset button:hover {
+    background-color: #FF6863;
+    cursor: pointer;
+    color: white;
+}
+
+.valentine {
+    text-align: top;
+    font-family: Arial, Helvetica, sans-serif;
+    color:rgb(20, 20, 20);
+    font-size: 30px;
+    margin-top: -150px;
+}
+
+.letter::-webkit-scrollbar {
+    width: 6px;
+}
+
+.letter::-webkit-scrollbar-thumb {
+    background: #ff748d;
+    border-radius: 10px;
+}
+
+
+@keyframes floatUp {
+    0% {
+        transform: translateY(0) rotate(45deg) scale(1);
+        opacity: 1;
     }
-    50%{
-        transform: scale(0.85);
+    100% {
+        transform: translateY(-500px) rotate(45deg) scale(1.2);
+        opacity: 0;
     }
 }
